# csound-expression

./: .gitignore  BoxModel.hs  CHANGELOG  G.hs  GuiIdeas.hs  Makefile  Mix.hs  README.md  Test.hs  UpcomingReleaseNotes.md  cabal.project  csound-expression.cabal  script.hs  stack.yaml  todo.txt  wow.csd
csound-catalog/: csound-catalog.cabal
csound-catalog/src/Csound/: Patch.hs
csound-catalog/src/unsorted/: PulseWidthModSynth.hs  WindTest.hs
csound-controllers/: README.md  csound-controllers.cabal
csound-controllers/src/Csound/Control/Midi/: LaunchKey.hs
csound-core/: csound-core.cabal
csound-core/src/Csound/: Core.hs
csound-core/src/Csound/Core/: Opcodes.hs  State.hs  Types.hs
csound-core/src/Csound/Core/Opcodes/: Instr.hs  Vco.hs
csound-core/src/Csound/Core/State/: Options.hs
csound-core/src/Csound/Core/Types/: Array.hs  Gen.hs  Prim.hs  PureArray.hs  Rate.hs  SE.hs  SigSpace.hs  Tuple.hs
csound-core/src/Csound/Core/Types/Prim/: Bool.hs  D.hs  InstrId.hs  Sig.hs  Spec.hs  Str.hs  Tab.hs  Val.hs
csound-core/src/Csound/Core/Types/SE/: Instr.hs  Logic.hs  Port.hs  Ref.hs  Render.hs
csound-expression/: CHANGELOG  csound-expression.cabal
csound-expression-dynamic/: README.md  csound-expression-dynamic.cabal
csound-expression-dynamic/src/Csound/: Dynamic.hs
csound-expression-dynamic/src/Csound/Dynamic/: Build.hs  Render.hs  Types.hs
csound-expression-dynamic/src/Csound/Dynamic/Render/: Instr.hs  Pretty.hs
csound-expression-dynamic/src/Csound/Dynamic/Tfm/: DeduceTypes.hs  IfBlocks.hs  InferTypes.hs  Liveness.hs  SaturateIf.hs  TmpVars.hs  UnfoldMultiOuts.hs
csound-expression-dynamic/src/Csound/Dynamic/Types/: CsdFile.hs  Dep.hs  Exp.hs  Flags.hs
csound-expression-opcodes/: csound-expression-opcodes.cabal
csound-expression-typed/: README.md  csound-expression-typed.cabal
csound-expression-typed-core/: README.md  csound-expression-typed-core.cabal
csound-expression-typed-core/src/Csound/Typed/: Core.hs
csound-expression-typed-core/src/Csound/Typed/Core/: Opcodes.hs  State.hs  Types.hs
csound-expression-typed-core/src/Csound/Typed/Core/Opcodes/: Instr.hs  Osc.hs
csound-expression-typed-core/src/Csound/Typed/Core/State/: Options.hs
csound-expression-typed-core/src/Csound/Typed/Core/Types/: Array.hs  Gen.hs  Prim.hs  SE.hs  Tuple.hs
csound-expression-typed-core/src/Csound/Typed/Core/Types/Prim/: Bool.hs  D.hs  InstrId.hs  Sig.hs  SigSpace.hs  Spec.hs  Str.hs  Tab.hs  Val.hs
csound-expression-typed-core/src/Csound/Typed/Core/Types/SE/: Instr.hs  Logic.hs  Port.hs  Ref.hs  Render.hs
csound-expression-typed/data/opcodes/: AmbiRow.udo  AmbiRowMp3.udo  LiveRow.udo  LiveRows.udo  adsr140.udo  tabQueue2.udo
csound-expression/benchmark/: Main.hs
csound-expression/examples/: Color.hs  README.txt
csound-expression/examples/Gui/: Key.hs
csound-expression/ideas/: GenList.md  Pat2.hs
csound-expression/src/Csound/: Air.hs  Control.hs  IO.hs  Options.hs  SigSpace.hs  Tab.hs  Tuning.hs  Types.hs
csound-sampler/: csound-sampler.cabal
csound-sampler/src/Csound/: Sam.hs
csound-sampler/src/Csound/Sam/: Chord.hs  Core.hs  Trig.hs  Ui.hs
examples/: Color.hs  DubBass.hs  Events.hs  Gm.hs  Guis.hs  Heartbeat.hs  Live.hs  Midi.hs  New.hs  README.txt  Test.hs  Tibetan.hs  Wind.hs
examples/Api/: Player.hs  channels.py  message.csd  oscil.py  player.csd  player.py
examples/Gui/: Button.hs  Envelope.hs  EnvelopeAndHarmonics.hs  Filter.hs  Harmonics.hs  Key.hs  Osc.hs  Waves.hs
gen-csound-opcodes/: gen-csound-opcodes.cabal
gen-csound-opcodes/app/: Main.hs  Unparsed.hs
gen-csound-opcodes/resources/: MiscQuickref.html  csound-expression-opcodes.cabal-template
gen-opcodes/: gen-opcodes.cabal
gen-opcodes/resources/: csound-expression-opcodes-dynamic.cabal
gen-opcodes/src/: Main.hs  Prepare.hs  Unparsed.hs
ideas/: AnotherGui.hs  CE-Release-todo.md  G.hs  GenList.md  GuiIdeas.hs  InstrToggle.hs  Osc.hs  Roadmap.md  Sampler.hs  Sharc.hs  idea.txt  tools.md
ideas/announce/: Ann-5-2.md
ideas/fx/: MonoPolySynth.csd  StereoPingPongDelay.csd
ideas/gui/: Gui.hs
ideas/gui/Gui/: Props.hs
legacy/csound-expression/: csound-expression.cabal
legacy/csound-expression-typed/: csound-expression-typed.cabal
legacy/csound-expression/examples/: Midi.hs
legacy/csound-expression/ideas/: UkuFx.hs  idea.txt
scripts/: Core.hs  Multi.hs  Oscils.hs  default.ghci  up-to-cat.sh
src/: Csound.hs
src/Csound/: Air.hs  Base.hs  BoxModel.hs  Cabbage.hs  Compat.hs  Control.hs  Exp.hs  Gui.hs  IO.hs  LowLevel.hs  Opcode.hs  Options.hs  Render.hs  SigSpace.hs  Tab.hs  Test.hs  Tuning.hs  Types.hs
src/Csound/Air/: Envelope.hs  Filter.hs  Fm.hs  Fx.hs  Granular.hs  Hvs.hs  Live.hs  Looper.hs  Misc.hs  ModArg.hs  Padsynth.hs  Pan.hs  Patch.hs  Sampler.hs  Seg.hs  Spec.hs  Wav.hs  Wave.hs
src/Csound/Control/: Evt.hs  Gui.hs  Instr.hs  Midi.hs  Mix.hs  Osc.hs  Overload.hs  SE.hs  Sf.hs
src/Csound/Exp/: Arg.hs  BoolExp.hs  Buf.hs  Cons.hs  Event.hs  EventList.hs  GE.hs  GERef.hs  Gui.hs  Inline.hs  Instr.hs  Logic.hs  Mix.hs  NumExp.hs  Numeric.hs  Options.hs  Random.hs  Ref.hs  SE.hs  SERef.hs  Tuple.hs  Widget.hs  Wrapper.hs
src/Csound/Gui/: Layout.hs  Props.hs  Widget.hs
src/Csound/Opcode/: Advanced.hs  Basic.hs  Control.hs  Data.hs  Interaction.hs  Math.hs  Plugins.hs
src/Csound/Render/: Channel.hs  IndexMap.hs  Instr.hs  InstrTable.hs  Mix.hs  Options.hs  Pretty.hs  PrettyOp.hs  Sco.hs
src/Csound/Tfm/: BiMap.hs  DAG.hs  (+8 more)
tutorial/: CsoundInstro.markdown  EventsTutorial.md  Index.md  Overview.markdown  QuickStart.markdown  SynthTutorial.md  UserInteractionTutorial.md
tutorial/chapters/: Arrays.md  BasicTypesTutorial.md  CabbageTutorial.md  CsoundAPI.md  EventsTutorial.md  FxFamily.md  GranularSynthesisTutorial.md  ImperativeInstruments.md  InstrumentsShowCase.md  Intro.md  LiveWidgetsTutorial.md  ModArg.md  Padsynth.md  Patches.md  ProducingTheOutputTutorial.md  SamplesTutorial.md  ScoresTutorial.md  SignalSegmentsTutorial.md  SignalTfm.md  SoundFontsTutorial.md  Spectrums.md  SynthTutorial.md  Tuning.md  UserInteractionTutorial.md
(+181 files in other folders)
