Name:          csound-expression
Version:       4.9.1
Cabal-Version: >= 1.6
License:       BSD3
License-file:  LICENSE
Author:	       Anton Kholomiov
Synopsis:      library to make electronic music
Stability:     Experimental
Tested-With:   GHC==7.10
Build-Type:    Simple
Category:      Music, Sound
Maintainer:    <anton.kholomiov@gmail.com>

Description:   
    Welcome to the simplest textual synthesizer.
    .
    > dac $ osc 440
    .
    Csound-expression is a Haskell framework for computer music.
    With the help of the library we can create our instruments on the fly. 
    A few lines in the interpreter is enough to get the cool sound going
    out of your speakers. It can be used for simple daily sound-file processing 
    or for a full-blown live performances.
    .
    Got interested? Check out the guide: <https://github.com/anton-k/csound-expression/blob/master/tutorial/Index.md>
    .
    Acknowledgements (I'd like to mention those who supported me a lot with their music and ideas):
    .
    * music: entertainment for the braindead, three pandas and the moon, odno no, ann's'annat & alizbar, toe, iamthemorning, atoms for piece / radiohead, loscil, boards of canada,
    Hozan Yamamoto, Tony Scott and Shinichi Yuize. 
    .
    * ideas: Conal Elliott, Oleg Kiselyov, Paul Hudak, Gabriel Gonzalez, Rich Hickey and Csound's community.
   
Extra-Source-Files : 
    examples/README.txt
    
    examples/Test.hs
    examples/Heartbeat.hs
    
    examples/Color.hs
    examples/Gm.hs
    examples/Tibetan.hs
    examples/Wind.hs
    examples/Live.hs

    examples/Midi.hs
    examples/Events.hs
    examples/DubBass.hs

    examples/Gui/Button.hs          
    examples/Gui/Harmonics.hs      
    examples/Gui/EnvelopeAndHarmonics.hs      
    examples/Gui/Key.hs        
    examples/Gui/Waves.hs

Homepage:        https://github.com/anton-k/csound-expression
Bug-Reports:     https://github.com/anton-k/csound-expression/issues

Source-repository head
    Type: git
    Location: https://github.com/anton-k/csound-expression


Library
  Ghc-Options:    -Wall
  Build-Depends:
        base >= 4, base < 5, process, data-default, Boolean >= 0.1.0, colour >= 2.0, transformers >= 0.3, containers,
        csound-expression-typed >= 0.0.9.1, csound-expression-dynamic >= 0.1.5, temporal-media >= 0.6.1,
        csound-expression-opcodes >= 0.0.3
  Hs-Source-Dirs:      src/
  Exposed-Modules:
        Csound.Base

        Csound.Air        
        Csound.Air.Wave
        Csound.Air.Granular        
        Csound.Air.Envelope
        Csound.Air.Filter
        Csound.Air.Wav
        Csound.Air.Spec
        Csound.Air.Fx
        Csound.Air.Live
        Csound.Air.Seg
        Csound.Air.Sampler
        Csound.Air.Looper
        Csound.Air.Patch
        Csound.Air.Misc
        Csound.Air.Hvs
        Csound.Air.Fm
        Csound.Air.Pan        
        
        Csound.Types
        Csound.Tab
        Csound.SigSpace
        Csound.IO
        Csound.Options

        Csound.Control
        Csound.Control.Evt
        Csound.Control.Instr
        Csound.Control.SE
        
        Csound.Control.Midi
        Csound.Control.Sf
        Csound.Control.Osc
        Csound.Control.Channel

        Csound.Control.Gui
        Csound.Control.Gui.Widget
        Csound.Control.Gui.Props
        Csound.Control.Gui.Layout

--        Csound.LowLevel
  Other-Modules:
        Csound.Control.Overload
        Csound.Control.Overload.Outs
        Csound.Control.Overload.MidiInstr
        Csound.Control.Overload.SpecInstr

