name:           csound-controllers
version:        0.1.1.0
description:    Please see the README on GitHub at <https://github.com/githubuser/csound-controllers#readme>
homepage:       https://github.com/githubuser/csound-controllers#readme
bug-reports:    https://github.com/githubuser/csound-controllers/issues
author:         Author name here
maintainer:     example@example.com
copyright:      2018 Author name here
license:        BSD3
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.22
extra-source-files:
    ChangeLog.md
    README.md

source-repository head
  type: git
  location: https://github.com/githubuser/csound-controllers

library
  exposed-modules:
      Csound.Control.Midi.LaunchKey
  hs-source-dirs:
      src
  build-depends:
        base >=4.7 && <5,
        csound-expression >= 5.3.4
  default-language: Haskell2010

test-suite csound-controllers-test
  type: exitcode-stdio-1.0
  main-is: Spec.hs
  other-modules:
      Paths_csound_controllers
  hs-source-dirs:
      test
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base >=4.7 && <5
    , csound-controllers
    , csound-expression >= 5.3.4
  default-language: Haskell2010
