Name:          csound-core
Version:       0.2.7
Cabal-Version: 1.12
License:       BSD3
License-file:  LICENSE
Author:	       Anton Kholomiov
Synopsis:      typed core for the library csound-expression
Stability:     Experimental
Tested-With:   GHC==7.10
Build-Type:    Simple
Category:      Music, Sound
Maintainer:    <anton.kholomiov@gmail.com>

Description: typed core for library csound-expression. Provides typed core lang for csound

Homepage:        https://github.com/anton-k/csound-core
Bug-Reports:     https://github.com/anton-k/csound-core/issues

Source-repository head
    Type: git
    Location: https://github.com/anton-k/csound-expression-typed


Library
  Ghc-Options:    -Wall -Werror
  Build-Depends:
        base >= 4.10, base < 5,
        bytestring,
        ghc-prim,
        containers,
        mtl,
        transformers >= 0.3,
        Boolean >= 0.1.0,
        colour >= 2.0,
        data-default,
        deepseq,
        NumInstances,
        filepath,
        directory,
        wl-pprint-text >= 1.2.0,
        csound-expression-dynamic >= 0.3.8,
        hashable,
        text,
        data-fix,
        unordered-containers,
        process

  Hs-Source-Dirs:      src/
  Exposed-Modules:
    Csound.Core
    Csound.Core.Opcodes
    Csound.Core.Types
    Csound.Core.Types.Gen
    Csound.Core.Types.Prim
    Csound.Core.Types.SigSpace
    Csound.Core.Types.Array
    Csound.Core.Types.SE
    Csound.Core.Types.Tuple
    Csound.Core.Render
    Csound.Core.Render.Options

  Other-Modules:
    Csound.Core.State
    Csound.Core.Types.Prim.Bool
    Csound.Core.Types.Prim.InstrId
    Csound.Core.Types.Prim.D
    Csound.Core.Types.Prim.Sig
    Csound.Core.Types.Prim.Val
    Csound.Core.Types.Prim.Spec
    Csound.Core.Types.Prim.Str
    Csound.Core.Types.Prim.Tab
    Csound.Core.Types.PureArray
    Csound.Core.Types.Rate
    Csound.Core.Opcodes.Instr
    Csound.Core.Opcodes.Osc
    Csound.Core.Opcodes.Vco
    Csound.Core.Types.SE.Core
    Csound.Core.Types.SE.Instr
    Csound.Core.Types.SE.Logic
    Csound.Core.Types.SE.Ref
    Csound.Core.Types.SE.Port

  Default-Language: Haskell2010
  Default-extensions:
    FlexibleInstances
    FlexibleContexts
    DeriveGeneric
    DerivingStrategies
    ImportQualifiedPost
    LambdaCase
    OverloadedStrings
    ScopedTypeVariables
    TypeApplications
    GeneralizedNewtypeDeriving
    TypeFamilies
    ExistentialQuantification
    RecordWildCards
    TupleSections
    TypeOperators
