Name:          csound-expression-dynamic
Version:       0.3.5
Cabal-Version: >= 1.10
License:       BSD3
License-file:  LICENSE
Author:	       Anton Kholomiov
Synopsis:      dynamic core for csound-expression library
Stability:     Experimental
Tested-With:   GHC==7.6
Build-Type:    Simple
Category:      Music, Sound
Maintainer:    <anton.kholomiov@gmail.com>

Description:

Homepage:        https://github.com/anton-k/csound-expression-dynamic
Bug-Reports:     https://github.com/anton-k/csound-expression-dynamic/issues

Source-repository head
    Type: git
    Location: https://github.com/anton-k/csound-expression-dynamic


Library
  Ghc-Options:    -Wall
  Build-Depends:
        base >= 4.6, base < 5, data-default, containers, array, transformers >= 0.3, wl-pprint >= 1.2.1,
        Boolean >= 0.1.0, data-fix >= 0.3.0, data-fix-cse >= 0.0.3, hashable,
        deriving-compat
  Hs-Source-Dirs:      src/
  default-language: Haskell2010
  Exposed-Modules:
    Csound.Dynamic

    Csound.Dynamic.Types
    Csound.Dynamic.Types.Exp
    Csound.Dynamic.Types.Dep
    Csound.Dynamic.Types.CsdFile
    Csound.Dynamic.Types.Flags

    Csound.Dynamic.Build
    Csound.Dynamic.Build.Numeric
    Csound.Dynamic.Build.Logic

    Csound.Dynamic.Render

    Csound.Dynamic.Render.Instr
    Csound.Dynamic.Render.Pretty
  Other-Modules:
    Csound.Dynamic.Tfm.DeduceTypes
    Csound.Dynamic.Tfm.Liveness
    Csound.Dynamic.Tfm.UnfoldMultiOuts





