Name:          csound-expression-opcodes-dynamic
Version:       0.0.0
Cabal-Version: >= 1.6
License:       BSD3
License-file:  LICENSE
Author:	       Anton Kholomiov
Synopsis:      opcodes for the library csound-expression-dynamic
Stability:     Experimental
Tested-With:   GHC==7.6
Build-Type:    Simple
Category:      Music, Sound
Maintainer:    <anton.kholomiov@gmail.com>

Description:   opcodes for the library csound-expression-dynamic

Homepage:        https://github.com/anton-k/csound-expression-opcodes-dynamic
Bug-Reports:     https://github.com/anton-k/csound-expression-opcodes-dynamic/issues

Source-repository head
    Type: git
    Location: https://github.com/anton-k/csound-expression-opcodes-dynamic

Library
  Ghc-Options:    -Wall
  Build-Depends:
        base >= 4, base < 5, csound-expression-dynamic >= 0.3.5
  Hs-Source-Dirs:      src/
  Exposed-Modules:
